--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <title>Todd Barchok's Profile</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this app. The contents of this app can be <a href="http://barchok.com/p/">found here</a></noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
